objects/New_Solution_Design__c.object
<CustomObject>
    <fields>
        <fullName>PureEngage_Cloud_Capabilities_Phase_1__c</fullName>
        <label>PureEngage Cloud Capabilities - Phase 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>SOW-100 Inbound Voice IVR</fullName>
                </value>
                <value>
                    <fullName>SOW-101 Inbound Voice IVR - TTS</fullName>
                </value>
                <value>
                    <fullName>SOW-102 Inbound Voice IVR – ASR</fullName>
                </value>
                <value>
                    <fullName>SOW-103 Inbound Voice Routing with Screen Pop</fullName>
                </value>
                <value>
                    <fullName>SOW-104 Workspace Web Edition (WWE) Agent Desktop</fullName>
                </value>
                <value>
                    <fullName>SOW-105 Genesys SIP Endpoint</fullName>
                </value>
                <value>
                    <fullName>SOW-106 CX Insights  (Historical Reporting)</fullName>
                </value>
                <value>
                    <fullName>SOW-107 Historical Data Feed</fullName>
                </value>
                <value>
                    <fullName>SOW-108 Real-time Reporting</fullName>
                </value>
                <value>
                    <fullName>SOW-109 Workforce Management</fullName>
                </value>
                <value>
                    <fullName>SOW-110 Interaction Recording</fullName>
                </value>
                <value>
                    <fullName>SOW-111 Quality Management</fullName>
                </value>
                <value>
                    <fullName>SOW-112 Screen Capture</fullName>
                </value>
                <value>
                    <fullName>SOW-113 Group Voice Mail</fullName>
                </value>
                <value>
                    <fullName>SOW-114 Personal Voice Mail</fullName>
                </value>
                <value>
                    <fullName>SOW-115 eServices - Email</fullName>
                </value>
                <value>
                    <fullName>SOW-116 eServices – Reactive Chat</fullName>
                </value>
                <value>
                    <fullName>SOW-117 Outbound – Progressive</fullName>
                </value>
                <value>
                    <fullName>SOW-121 Callback - In Queue</fullName>
                </value>
                <value>
                    <fullName>SOW-122 Callback - Web</fullName>
                </value>
                <value>
                    <fullName>SOW-123 Post Call Survey</fullName>
                </value>
                <value>
                    <fullName>SOW-125 WWE in Console mode for Salesforce</fullName>
                </value>
                <value>
                    <fullName>SOW-126 Speech Analytics (GIA)</fullName>
                </value>
                <value>
                    <fullName>SOW-127 External LDAP Authentication</fullName>
                </value>
                <value>
                    <fullName>SOW-129 IVR Recording</fullName>
                </value>
                <value>
                    <fullName>SOW-130 PureEngage API: Provisioning</fullName>
                </value>
                <value>
                    <fullName>SOW-131 PureEngage APIs: Statistics</fullName>
                </value>
                <value>
                    <fullName>SOW-132/SOW-145 PureEngage APIs: Workspace API / Voice, Chat</fullName>
                </value>
                <value>
                    <fullName>SOW-133 IVR PaaS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PureEngage_Cloud_Capabilities_Phase_22__c</fullName>
        <label>PureEngage Cloud Capabilities - Phase 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SOW-301 Outbound-Predictive</fullName>
                </value>
                <value>
                    <fullName>SOW-302 Outbound-Manual (Workspace Web)</fullName>
                </value>
                <value>
                    <fullName>SOW-303 Outbound-Preview</fullName>
                </value>
                <value>
                    <fullName>SOW-304 Agent Scripting</fullName>
                </value>
                <value>
                    <fullName>SOW-305 Outbound IVR w/Genesys Voice Talent</fullName>
                </value>
                <value>
                    <fullName>SOW-306 Inbound IVR w/Genesys Voice Talent</fullName>
                </value>
                <value>
                    <fullName>SOW-307 Voice IVR  SmartSounds</fullName>
                </value>
                <value>
                    <fullName>SOW-308 Inbound Skills Based Voice Routing</fullName>
                </value>
                <value>
                    <fullName>SOW-309 SIP Registrar (soft phone)</fullName>
                </value>
                <value>
                    <fullName>SOW-310 Call Recording</fullName>
                </value>
                <value>
                    <fullName>SOW-311 Local Touch</fullName>
                </value>
                <value>
                    <fullName>SOW-312 Email Channel</fullName>
                </value>
                <value>
                    <fullName>SOW-313 Email domain provisioning</fullName>
                </value>
                <value>
                    <fullName>SOW-314 Short Message Service (SMS)</fullName>
                </value>
                <value>
                    <fullName>SOW-315 MMS</fullName>
                </value>
                <value>
                    <fullName>SOW-316 Short Codes, Long codes</fullName>
                </value>
                <value>
                    <fullName>SOW-318 Web Channel and Mobile pages</fullName>
                </value>
                <value>
                    <fullName>SOW-319 Nanoclick</fullName>
                </value>
                <value>
                    <fullName>SOW-322 Compliance Rules</fullName>
                </value>
                <value>
                    <fullName>SOW-323 Secured Enterprise</fullName>
                </value>
                <value>
                    <fullName>SOW-324 Automated call data import/List Import (FTP)</fullName>
                </value>
                <value>
                    <fullName>SOW-325 List Builder</fullName>
                </value>
                <value>
                    <fullName>SOW-326 Automated result file export (FTP)</fullName>
                </value>
                <value>
                    <fullName>SOW-328 OnDemand (Tricklefeed)</fullName>
                </value>
                <value>
                    <fullName>SOW-330 Standard Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PureEngage_Cloud_Submission_date__c</fullName>
        <label>PureEngage Cloud Submission date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quality_Management__c</fullName>
        <label>Quality Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Performed using ICBM</fullName>
                </value>
                <value>
                    <fullName>Performed using Interaction Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recording_Type__c</fullName>
        <label>Recording Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mono</fullName>
                </value>
                <value>
                    <fullName>Stereo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redundancy_Model__c</fullName>
        <label>**Redundancy Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Co-Located Switchover Pair</fullName>
                </value>
                <value>
                    <fullName>Co-Located Switchover Pair w/ DR Server off site</fullName>
                </value>
                <value>
                    <fullName>Geo-Split Switchover Pair</fullName>
                </value>
                <value>
                    <fullName>Non-redundant</fullName>
                </value>
                <value>
                    <fullName>Single Site Switchover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Phase_Agent_traffic__c</fullName>
        <label>Required Phase Agent traffic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Phase_Customer_Telecom__c</fullName>
        <label>Required Phase Customer Telecom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Phase_Customer_data_traffic__c</fullName>
        <label>Required Phase Customer data traffic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Phase_MPLS__c</fullName>
        <label>Required Phase MPLS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Phase__c</fullName>
        <label>Required Phase Genesys Telecom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_Engagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SC Engagement</label>
        <referenceTo>DSR_SCEngagement__c</referenceTo>
        <relationshipName>New_Solution_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMS_Delivery_Receipts__c</fullName>
        <label>SMS Delivery Receipts</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW_signed__c</fullName>
        <label>SOW signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SSO__c</fullName>
        <label>**SSO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, using SP-initiated SAML 2.0</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SS_Est_storage_size_voice_GB__c</fullName>
        <label>SS Est. storage size voice: [ ] GB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SS_Retention_for_call_recs_days__c</fullName>
        <label>SS Retention for call recs: [ ] days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SS_calls_recorded__c</fullName>
        <label>SS % calls recorded: [ ]%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Screen_Storage__c</fullName>
        <label>Screen Storage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Genesys</fullName>
                </value>
                <value>
                    <fullName>Customer premise (requires local RCS)</fullName>
                </value>
                <value>
                    <fullName>S3 with RCS on customer premise</fullName>
                </value>
                <value>
                    <fullName>S3 thru Genesys (requires INET-ICWS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Summary_of_Customer_Business_Needs__c</fullName>
        <label>Short Summary of Customer Business Needs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specific_KPI_for_Each_Business_Unit_to_C__c</fullName>
        <label>Specific KPI for Each Business Unit to C</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specify_Turnaround_Time_Speech_Analyti__c</fullName>
        <label>Specify Turnaround Time – Speech Analyti</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/a</fullName>
                </value>
                <value>
                    <fullName>4 Hours</fullName>
                </value>
                <value>
                    <fullName>Next Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speech_Recognition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speech Recognition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;New&apos;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Revision Pending</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supported_Character_Sets_File_Encoding__c</fullName>
        <label>Supported Character Sets / File Encoding</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supported_Countries__c</fullName>
        <label>Supported Countries</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supported_Languages_in_IVR_ASR__c</fullName>
        <label>Supported Languages in IVR – ASR</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>American English</fullName>
                </value>
                <value>
                    <fullName>Australian English</fullName>
                </value>
                <value>
                    <fullName>British English</fullName>
                </value>
                <value>
                    <fullName>Castilian Spanish</fullName>
                </value>
                <value>
                    <fullName>French Canadian</fullName>
                </value>
                <value>
                    <fullName>Mexican Spanish</fullName>
                </value>
                <value>
                    <fullName>Standard French</fullName>
                </value>
                <value>
                    <fullName>Standard German</fullName>
                </value>
                <value>
                    <fullName>Standard Italian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supported_Languages_in_IVR_TTS__c</fullName>
        <label>Supported Languages in IVR – TTS</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>American English</fullName>
                </value>
                <value>
                    <fullName>Australian English</fullName>
                </value>
                <value>
                    <fullName>British English</fullName>
                </value>
                <value>
                    <fullName>Castilian Spanish</fullName>
                </value>
                <value>
                    <fullName>French Canadian</fullName>
                </value>
                <value>
                    <fullName>Mexican Spanish</fullName>
                </value>
                <value>
                    <fullName>Standard French</fullName>
                </value>
                <value>
                    <fullName>Standard German</fullName>
                </value>
                <value>
                    <fullName>Standard Italian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supported_Languages_to_Analyze_Speech__c</fullName>
        <label>Supported Languages to Analyze – Speech</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>American English</fullName>
                </value>
                <value>
                    <fullName>Australian English</fullName>
                </value>
                <value>
                    <fullName>British English</fullName>
                </value>
                <value>
                    <fullName>Castilian Spanish</fullName>
                </value>
                <value>
                    <fullName>French Canadian</fullName>
                </value>
                <value>
                    <fullName>Mexican Spanish</fullName>
                </value>
                <value>
                    <fullName>Standard French</fullName>
                </value>
                <value>
                    <fullName>Standard German</fullName>
                </value>
                <value>
                    <fullName>Standard Italian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supported_UI_languages__c</fullName>
        <label>Supported UI languages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supported_languages__c</fullName>
        <label>Supported languages</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAM_Service_Element__c</fullName>
        <label>TAM Service Element</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>TAM Go Live Support - 120 days</fullName>
                </value>
                <value>
                    <fullName>TAM - 365 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_to_Speech__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text-to-Speech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Agents__c</fullName>
        <label>**Total # Agents</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Business_Users__c</fullName>
        <label>**Total # Business Users</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Contact_Center_Agents__c</fullName>
        <label>Total # Contact Center Agents</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Customer_Sites__c</fullName>
        <label>**Total # Customer Sites</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Enterprise_Agents__c</fullName>
        <label>Total # Enterprise Agents</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Lines_of_Business__c</fullName>
        <label>Total # Lines of Business</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Supervisors__c</fullName>
        <label>**Total # Supervisors</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Telephony_Trunks__c</fullName>
        <label>**Total # Telephony Trunks</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Workgroups_ACD_Queue__c</fullName>
        <label>**Total # Workgroups (ACD Queue)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Workgroups_General_Non_ACD__c</fullName>
        <label>**Total # Workgroups (General Non-ACD)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_number_of_call_messaging_flows__c</fullName>
        <label>Total number of call/messaging flows</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_Agent_traffic__c</fullName>
        <label>Type Agent traffic</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Customer_Telecom__c</fullName>
        <label>Type Customer Telecom</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>MPLS</fullName>
                </value>
                <value>
                    <fullName>RVA</fullName>
                </value>
                <value>
                    <fullName>SD-WAN</fullName>
                </value>
                <value>
                    <fullName>PSTN (SIP)</fullName>
                </value>
                <value>
                    <fullName>PSTN (TDM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Genesys_Telecom__c</fullName>
        <label>Type Genesys Telecom</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>MPLS</fullName>
                </value>
                <value>
                    <fullName>RVA</fullName>
                </value>
                <value>
                    <fullName>SD-WAN</fullName>
                </value>
                <value>
                    <fullName>PSTN (SIP)</fullName>
                </value>
                <value>
                    <fullName>PSTN (TDM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Phase_MPLS__c</fullName>
        <label>Type Phase MPLS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Campaigns__c</fullName>
        <label>**Type of Campaigns</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agentless</fullName>
                </value>
                <value>
                    <fullName>MCS (no Auto Dialer)</fullName>
                </value>
                <value>
                    <fullName>Power</fullName>
                </value>
                <value>
                    <fullName>Predictive</fullName>
                </value>
                <value>
                    <fullName>Preview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Client_Script__c</fullName>
        <label>**Type of Client/Script</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interaction Connect Adv Custom Scripts</fullName>
                </value>
                <value>
                    <fullName>Interaction Connect Base Scripts</fullName>
                </value>
                <value>
                    <fullName>PureConnect for Salesforce (no scripts)</fullName>
                </value>
                <value>
                    <fullName>Scripter Adv Custom Scripts</fullName>
                </value>
                <value>
                    <fullName>Scripter Base Scripts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Contact_List_Management__c</fullName>
        <label>**Type of Contact List Management</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manually Managed via Administrator</fullName>
                </value>
                <value>
                    <fullName>PS Contact List Import Customization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UAT_start_Phase_1__c</fullName>
        <label>UAT start (Phase 1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VS_Est_storage_size_voice_GBs__c</fullName>
        <label>VS Est. storage size voice: [ ] GBs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VS_Retention_for_call_recs_days__c</fullName>
        <label>VS Retention for call recs: [ ] days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VS_calls_recorded__c</fullName>
        <label>VS % calls recorded: [ ]%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voice_Storage__c</fullName>
        <label>Voice Storage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Genesys</fullName>
                </value>
                <value>
                    <fullName>Customer premise (requires local RCS)</fullName>
                </value>
                <value>
                    <fullName>S3 with RCS on customer premise</fullName>
                </value>
                <value>
                    <fullName>S3 thru Genesys (requires INET-ICWS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voicebot_Google_Dialogflow__c</fullName>
        <label>Voicebot – Google Dialogflow</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Test1</fullName>
                </value>
                <value>
                    <fullName>Test2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voicebot_Google_TTS__c</fullName>
        <label>Voicebot – Google TTS</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Test1</fullName>
                </value>
                <value>
                    <fullName>Test2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WFM__c</fullName>
        <label>**WFM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Aspect eWFM</fullName>
                </value>
                <value>
                    <fullName>Genesys WFM</fullName>
                </value>
                <value>
                    <fullName>GMT</fullName>
                </value>
                <value>
                    <fullName>InJixo (InVision Cloud Release)</fullName>
                </value>
                <value>
                    <fullName>InVision</fullName>
                </value>
                <value>
                    <fullName>Nice (IEX TotalView)</fullName>
                </value>
                <value>
                    <fullName>Optimizer</fullName>
                </value>
                <value>
                    <fullName>Pipkins (Real-Time Only)</fullName>
                </value>
                <value>
                    <fullName>Verint (Witness/BluePumpkin)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>